--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Agamjot Singh Jashan",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^14.7.1",
     "puppeteer": "^19.7.2",
     "puppeteer-core": "^19.7.2"
   },
