--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A bot to scrape news from popular news portals and send alerts whenver there is new news about stocks in pennytalks discord server",
   "main": "app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
+    "build": "tsc",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
